added check links

--- a/exercise1-1/exercise1-1.html
+++ b/exercise1-1/exercise1-1.html
@@ -24,16 +24,17 @@
                 them in the assets folder.
             </p>
             <p>Create a new sketch and load each sound in the <code>preload()</code> function. Use 
-            the examples from lecture as reference. You can also consult the <a href="https://p5js.org/reference/p5.SoundFile" target="_blank">p5.SoundFile documentation</a>.</p>
+            the examples from lecture as reference. You can also consult the <a href="https://p5js.org/reference/p5.sound/p5.SoundFile/" target="_blank">p5.SoundFile documentation</a>.</p>
             <p>Play a sound when the user presses a key. Each sound should be associated with a different 
                 key. For example, in my solution, pressing 1 plays the meow sound, pressing 2 plays the 
                 purring sound, and pressing 3 plays the snoring sound. If a sound is already playing 
                 when the user presses a key, stop that sound before playing the new sound. If 
-                you're not sure how to do this, consult the <a href="https://p5js.org/reference/p5.SoundFile" target="_blank">p5.SoundFile documentation</a>.
+                you're not sure how to do this, consult the <a href="https://p5js.org/reference/p5.sound/p5.SoundFile/" target="_blank">p5.SoundFile documentation</a>.
             </p>
-            <p>For an extra challenge, add a visualisation using <a href="https://p5js.org/reference/p5.Amplitude" target="_blank">p5.Amplitude</a> or <a href="https://p5js.org/reference/p5.FFT" target="_blank">p5.FFT</a>. The sample solution 
+            <p>For an extra challenge, add a visualisation using <a href="https://p5js.org/reference/p5.sound/p5.Amplitude/" target="_blank">p5.Amplitude</a> or <a href="https://p5js.org/reference/p5.sound/p5.FFT" target="_blank">p5.FFT</a>. The sample solution 
                 uses the p5.FFT <code>waveform()</code> method.
             </p>
+            <p>Check your work using <a href="./check-exercise1-1.html">check-exercise1-1.html</a>.</p>
             <p>Expected output:</p>
             <p>
                 <video width="600" height="400" controls>
