--- a/exercise1-2/exercise1-2.html
+++ b/exercise1-2/exercise1-2.html
@@ -28,6 +28,7 @@
                 browsers will not autoplay a sound so you will likely need to click the canvas before 
                 the sound effect begins to play. 
             </p>
+            <p>Check your work using <a href="./check-exercise1-2.html">check-exercise1-2.html</a>.</p>
             <p>Expected output:</p>
             <p>
                 <video width="600" height="400" controls>
