--- a/exercise1-4/exercise1-4.html
+++ b/exercise1-4/exercise1-4.html
@@ -31,7 +31,7 @@ up by the microphone. You can then use this number to move your character's mout
     returns 0, add the following line in <code>setup()</code> before starting the mic:</p>
     <pre>getAudioContext().suspend();</pre>
 <p>Then, call p5.js' <code>userStartAudio()</code> function inside the <code>mouseClicked()</code> function.</p>
-<p>You can see a complete example in the code for <a href="https://github.com/UoY-IM-PDM/PDM1-example-code/blob/main/Lectures/W8L1%20examples/audioIn/sketch.js" target="_blank">Week 8 Lecture 1 (audioIn)</a>.</p>
+<p>You can see a complete example in the code for <a href="https://github.com/UoY-PDM1/PDM1-example-code/blob/main/Lectures/W8L1/audioIn/sketch.js" target="_blank">Week 8 Lecture 1 (audioIn)</a>.</p>
 <p>Example output:</p>
             <p>
                 <video width="300" controls>
