--- a/exercise1-3/exercise1-3.html
+++ b/exercise1-3/exercise1-3.html
@@ -36,7 +36,8 @@ to set the frequency (pitch) of the oscillator. The higher the frequency, the hi
 <p>In the video below, five different notes are generated randomly. The user clicks on a square to play the associated note. The shade of 
     blue used to fill each square reflects the pitch of the note--the darker the fill, the lower the note. The 
     x location of each square is used to set it's pan.
-</p>           
+</p> 
+<p>You will find the <a href="https://p5js.org/reference/p5.sound/p5.Oscillator/" target="_blank">p5.js Oscillator documentation</a> helpful for this task.</p>          
 <p>This is an open-ended creative task so there are no tests for this exercise.</p>
             <p>Example output:</p>
             <p>
